k8s/namespace-configmaps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dataflux
  labels:
    name: dataflux
    environment: production
